[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/UI assets/element_0.png" type="Texture" id=2]
[ext_resource path="res://assets/UI assets/pixle.png" type="Texture" id=3]
[ext_resource path="res://assets/UI assets/charge.png" type="Texture" id=4]
[ext_resource path="res://assets/UI assets/element_1.png" type="Texture" id=5]
[ext_resource path="res://assets/UI assets/element_2.png" type="Texture" id=6]
[ext_resource path="res://assets/UI assets/element_3.png" type="Texture" id=7]
[ext_resource path="res://assets/UI assets/health.png" type="Texture" id=8]
[ext_resource path="res://assets/UI assets/bar.png" type="Texture" id=9]
[ext_resource path="res://assets/UI assets/Comfortaa-Bold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://scripts/mover.gd" type="Script" id=11]
[ext_resource path="res://assets/UI assets/UI.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]

font/size = 25
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 10 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 93.0

[node name="GUI" type="Control" groups=[
"world",
]]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="elements" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1083.0
margin/top = 263.0
margin/right = 1123.0
margin/bottom = 303.0

[node name="fire" type="TouchScreenButton" parent="elements"]

editor/display_folded = true
transform/pos = Vector2( -154, -259.625 )
transform/scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="tex" type="TextureFrame" parent="elements/fire"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 31.0
margin/right = 289.0
margin/bottom = 285.0
texture = ExtResource( 3 )
modulate = Color( 0.295715, 0.259766, 0.296875, 1 )
expand = true
stretch_mode = 0

[node name="color" type="TextureFrame" parent="elements/fire"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 278.0
margin/right = 282.0
margin/bottom = 516.0
texture = ExtResource( 3 )
modulate = Color( 1, 0.609375, 0, 1 )
expand = true
stretch_mode = 0

[node name="charge" type="Sprite" parent="elements/fire"]

visibility/opacity = 0.0
transform/pos = Vector2( 159.961, 159.74 )
texture = ExtResource( 4 )
vframes = 2
hframes = 2

[node name="water" type="TouchScreenButton" parent="elements"]

editor/display_folded = true
transform/pos = Vector2( -154, -129.625 )
transform/scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="tex" type="TextureFrame" parent="elements/water"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 31.0
margin/right = 289.0
margin/bottom = 285.0
texture = ExtResource( 3 )
modulate = Color( 0.295715, 0.259766, 0.296875, 1 )
expand = true
stretch_mode = 0

[node name="color" type="TextureFrame" parent="elements/water"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 278.0
margin/right = 282.0
margin/bottom = 516.0
texture = ExtResource( 3 )
modulate = Color( 0.541351, 0.745037, 0.855469, 1 )
expand = true
stretch_mode = 0

[node name="charge" type="Sprite" parent="elements/water"]

visibility/opacity = 0.0
transform/pos = Vector2( 159.961, 160.392 )
texture = ExtResource( 4 )
vframes = 2
hframes = 2
frame = 1

[node name="wind" type="TouchScreenButton" parent="elements"]

editor/display_folded = true
transform/pos = Vector2( -154, 0.375523 )
transform/scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="tex" type="TextureFrame" parent="elements/wind"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 31.0
margin/right = 289.0
margin/bottom = 285.0
texture = ExtResource( 3 )
modulate = Color( 0.295715, 0.259766, 0.296875, 1 )
expand = true
stretch_mode = 0

[node name="color" type="TextureFrame" parent="elements/wind"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 278.0
margin/right = 282.0
margin/bottom = 516.0
texture = ExtResource( 3 )
modulate = Color( 0.841194, 0.748444, 0.878906, 1 )
expand = true
stretch_mode = 0

[node name="charge" type="Sprite" parent="elements/wind"]

visibility/opacity = 0.0
transform/pos = Vector2( 159.961, 159.823 )
texture = ExtResource( 4 )
vframes = 2
hframes = 2
frame = 2

[node name="earth" type="TouchScreenButton" parent="elements"]

editor/display_folded = true
transform/pos = Vector2( -154, 130.376 )
transform/scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 7 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="tex" type="TextureFrame" parent="elements/earth"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 31.0
margin/right = 289.0
margin/bottom = 285.0
texture = ExtResource( 3 )
modulate = Color( 0.295715, 0.259766, 0.296875, 1 )
expand = true
stretch_mode = 0

[node name="color" type="TextureFrame" parent="elements/earth"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 278.0
margin/right = 282.0
margin/bottom = 516.0
texture = ExtResource( 3 )
modulate = Color( 0.679688, 0.548077, 0.321259, 1 )
expand = true
stretch_mode = 0

[node name="charge" type="Sprite" parent="elements/earth"]

visibility/opacity = 0.0
transform/pos = Vector2( 159.961, 160.15 )
texture = ExtResource( 4 )
vframes = 2
hframes = 2
frame = 3

[node name="counters" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 891.0
margin/bottom = 129.0

[node name="health" type="TextureProgress" parent="counters"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 27.0
margin/top = 24.0
margin/right = 275.0
margin/bottom = 64.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 8 )
texture/over = null
texture/progress = ExtResource( 9 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="kills" type="Container" parent="counters"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 376.0
margin/top = 22.0
margin/right = 416.0
margin/bottom = 62.0

[node name="text" type="Label" parent="counters/kills"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Kills"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="counters/kills"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 25.0
margin/right = 47.0
margin/bottom = 70.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Container" parent="counters"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 541.0
margin/top = 22.0
margin/right = 581.0
margin/bottom = 62.0

[node name="text" type="Label" parent="counters/score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Score"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="counters/score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 25.0
margin/right = 60.0
margin/bottom = 70.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="time" type="Container" parent="counters"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 726.0
margin/top = 22.0
margin/right = 766.0
margin/bottom = 62.0

[node name="text" type="Label" parent="counters/time"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 77.0
margin/bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "Time"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="counters/time"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 25.0
margin/right = 45.0
margin/bottom = 70.0
custom_fonts/font = SubResource( 1 )
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mover_pos" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -19.0
margin/top = 581.0
margin/right = 21.0
margin/bottom = 621.0

[node name="mover" type="Node2D" parent="mover_pos"]

editor/display_folded = true
transform/pos = Vector2( 125.699, -106.541 )
script/script = ExtResource( 11 )

[node name="center" type="Position2D" parent="mover_pos/mover"]

[node name="background" type="Sprite" parent="mover_pos/mover"]

editor/display_folded = true
visibility/opacity = 0.7
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 12 )
vframes = 2
hframes = 2

[node name="arrow" type="Sprite" parent="mover_pos/mover/background"]

visibility/opacity = 1.1
transform/pos = Vector2( 0, 107 )
transform/rot = 45.0
transform/scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 12 )
vframes = 2
hframes = 2
frame = 1

[node name="arrow1" type="Sprite" parent="mover_pos/mover/background"]

visibility/opacity = 1.1
transform/pos = Vector2( 112, 0 )
transform/rot = 135.0
transform/scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 12 )
vframes = 2
hframes = 2
frame = 1

[node name="arrow2" type="Sprite" parent="mover_pos/mover/background"]

visibility/opacity = 1.1
transform/pos = Vector2( -112, 0 )
transform/rot = -45.0
transform/scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 12 )
vframes = 2
hframes = 2
frame = 1

[node name="arrow3" type="Sprite" parent="mover_pos/mover/background"]

visibility/opacity = 1.1
transform/pos = Vector2( 0, -112 )
transform/rot = -135.0
transform/scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 12 )
vframes = 2
hframes = 2
frame = 1

[node name="knob" type="Sprite" parent="mover_pos/mover"]

editor/display_folded = true
transform/rot = -45.0
transform/scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 12 )
vframes = 2
hframes = 2
frame = 2

[node name="Sprite" type="Sprite" parent="mover_pos/mover/knob"]

transform/rot = 45.0
transform/scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 12 )
vframes = 2
hframes = 2
frame = 3

[node name="TouchScreenButton" type="TouchScreenButton" parent="mover_pos/mover"]

normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[connection signal="pressed" from="elements/fire" to="." method="_on_fire_pressed"]

[connection signal="released" from="elements/fire" to="." method="_on_fire_released"]

[connection signal="pressed" from="elements/water" to="." method="_on_water_pressed"]

[connection signal="released" from="elements/water" to="." method="_on_water_released"]

[connection signal="pressed" from="elements/wind" to="." method="_on_wind_pressed"]

[connection signal="released" from="elements/wind" to="." method="_on_wind_released"]

[connection signal="pressed" from="elements/earth" to="." method="_on_earth_pressed"]

[connection signal="released" from="elements/earth" to="." method="_on_earth_released"]

[connection signal="pressed" from="mover_pos/mover/TouchScreenButton" to="mover_pos/mover" method="_on_TouchScreenButton_pressed"]

[connection signal="released" from="mover_pos/mover/TouchScreenButton" to="mover_pos/mover" method="_on_TouchScreenButton_released"]


